# hackathon-Comfama

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_mvp.py  run_web.py
data/mvp_layout/00_Config/: beneficios.csv
prompts/: clasificar_documentos.txt  extraer_datos_documento.txt  generar_recomendacion.txt  mapear_historico_excel.txt
src/auxilios_mvp/: __init__.py  azure_openai.py  benefits.py  cli.py  cosmos_store.py  document_analyzer.py  document_media.py  excel_history.py  json_utils.py  models.py  pdf_text.py  pipeline.py  processing_state.py  recommendation.py  reporting.py  request_parser.py  runner.py  settings.py  web_app.py
src/auxilios_mvp/static/: app.css  app.js
src/auxilios_mvp/templates/: dashboard.html
