[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auxilios-mvp"
version = "0.1.0"
description = "MVP para analisis de auxilios de calidad de vida con Azure AI"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "PyMuPDF>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]
